opa-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opa
  labels:
    app: productpage
    version: v1
spec:
  type: NodePort
  selector:
    app: productpage
    version: v1
  ports:
    - name: http
      protocol: TCP
      port: 8181
      targetPort: 8181
